--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
+  port: 80
   context-path: /booking
 
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/booking?serverTimezone=UTC&amp;useUnicode=true&amp;characterEncoding=utf-8&useSSL=true
+    url: jdbc:mysql://127.0.0.1:3306/booking?serverTimezone=UTC&amp;useUnicode=true&amp;characterEncoding=utf-8&useSSL=true
     username: root
     password: 9t37qmeOR64l
   jpa:
